--- a/package.json
+++ b/package.json
@@ -11,9 +11,10 @@
     "db:migrate": "drizzle-kit migrate",
     "db:push": "drizzle-kit push",
     "db:studio": "drizzle-kit studio",
-    "db:seed:dev": "tsx db/seed.ts",
+    "db:seed": "tsx db/seed.ts",
     "db:seed:prod": "tsx db/seedProd.ts",
-    "create:admin": "tsx command/createAdmin.ts"
+    "create:admin": "tsx command/createAdmin.ts",
+    "db:truncate": "tsx command/truncateAll.ts"
   },
   "dependencies": {
     "@auth/drizzle-adapter": "^1.11.1",
